force-app/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <label>Contact</label>
    <nameField>
        <compound>true</compound>
        <label>Full Name</label>
        <type>Name</type>
    </nameField>
    <pluralLabel>Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>