force-app/main/default/objects/Contact/fields/Bye__c.field-meta.xml
<CustomField>
    <fullName>Bye__c</fullName>
    <label>Bye</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>