force-app/main/default/objects/Contact/fields/Draft_Season__c.field-meta.xml
<CustomField>
    <fullName>Draft_Season__c</fullName>
    <label>Draft Season</label>
    <referenceTo>Draft_Season__c</referenceTo>
    <relationshipLabel>Players</relationshipLabel>
    <relationshipName>Players</relationshipName>
    <type>Lookup</type>
</CustomField>