force-app/main/default/objects/Contact/fields/Is_Drafted__c.field-meta.xml
<CustomField>
    <fullName>Is_Drafted__c</fullName>
    <label>Is Drafted</label>
    <type>Checkbox</type>
</CustomField>