force-app/main/default/objects/Contact/fields/Overall_Rank__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rank__c</fullName>
    <label>Overall Rank</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>