force-app/main/default/objects/Contact/fields/Position_Rank__c.field-meta.xml
<CustomField>
    <fullName>Position_Rank__c</fullName>
    <label>Position Rank</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>